# template-pypi-todo

./: .gitattributes  .gitignore  MANIFEST.in  README.md  notes.md  setup.cfg
package_todo/: __init__.py
