[metadata]
name = template-pypi-todo
version = attr: package_todo.__version__
keywords = keywords_todo1, keywords_todo2
author = nrnn
author_email = nrnn_code@yeah.net
description = Description todo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nrnn/template-pypi-todo
project_urls =
    Bug Tracker = https://github.com/nrnn/template-pypi-todo/issues
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = package_todo
python_requires = >=3.6
include_package_data = True
